.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:50:59 **** Build of configuration Debug for project Backup ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c:51:7: error: expected expression
                                                clock_t startI;
                                                ^
../main.c:52:7: error: use of undeclared identifier 'startI'
                                                startI = clock(); // begin insertion sort
                                                ^
../main.c:55:38: error: use of undeclared identifier 'startI'
                                                double insertionTime = (endI - startI) / CLOCKS_PER_SEC;
                                                                               ^
3 errors generated.
make: *** [main.o] Error 1
17:51:35 **** Incremental Build of configuration Debug for project Backup ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c:51:7: error: expected expression
                                                clock_t startI;
                                                ^
../main.c:52:7: error: use of undeclared identifier 'startI'
                                                startI = clock(); // begin insertion sort
                                                ^
../main.c:55:38: error: use of undeclared identifier 'startI'
                                                double insertionTime = (endI - startI) / CLOCKS_PER_SEC;
                                                                               ^
3 errors generated.
make: *** [main.o] Error 1
17:51:59 **** Incremental Build of configuration Debug for project Backup ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building file: ../sorts.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"sorts.d" -MT"sorts.o" -o "sorts.o" "../sorts.c"
Finished building: ../sorts.c
 
Building target: Backup
Invoking: MacOS X C Linker
gcc  -o "Backup"  ./main.o ./sorts.o   
Finished building target: Backup
 
17:52:07 **** Incremental Build of configuration Debug for project Backup ****
make all 
make: Nothing to be done for `all'.
17:52:24 **** Incremental Build of configuration Debug for project Backup ****
make all 
make: Nothing to be done for `all'.
